--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@
 
 # Site settings
 title: In Secure Space
-email: InSecSpace@gmail.com
+email: insecspace@gmail.com
 #description: > # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://insecspace.github.io" # the base hostname & protocol for your site
-twitter_username: InSecSpace
-github_username:  InSecSpace
+twitter_username: insecspace
+github_username:  insecspace
 
 # Build settings
 markdown: kramdown
