--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: insecspace@gmail.com
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://insecspace.github.io" # the base hostname & protocol for your site
+url: "http://insec.space" # the base hostname & protocol for your site
 twitter_username: insecspace
 github_username:  insecspace
 
